--- a/dotfiles/wayland/rootbar/rootbar.css
+++ b/dotfiles/wayland/rootbar/rootbar.css
@@ -15,10 +15,11 @@ label {
 }
 
 .ws {
+    margin-top: 3px;
     background-color: --rootbar-color2;
     padding-left: 5px;
     padding-right: 5px;
-    margin-bottom:5px;
+    margin-bottom:8px;
     border-radius: 2px;
     border: 2px solid black;
     color: black;
